--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,14 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
-DB_HOST=catapi_pgsql_1
+DB_HOST=db
 DB_PORT=5432
 DB_DATABASE=cat_api
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
+
+WWWGROUP=1000
+WWWUSER=1000
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
