--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
             - pgsql
     pgsql:
         image: 'postgres:13'
+        container_name: db
         ports:
             - '${FORWARD_DB_PORT:-5432}:5432'
         environment:
